  (Dale Anson)

- Filter field in PluginManager InstallPanel (#2810926 - Olivier Chafik)

- New View option: Floatable toolbars. (Alan Ezust)

- New TextArea Option: Choice of color ordering w/ subpixel antialiasing.
  (#2989209 - Alan Ezust)

- New mode for Oracle PL/SQL 11. (#3078863 - Diogo Kollross)

- Factor Mode fix (#3100731 - Valeri Mytinski)

- In conjunction with the fix for tracker 3134215, added a new option to the
  General options pane to let the user choose whether to restore the split
  configuration. (Dale Anson)

}}}
{{{ Miscellaneous

- Made the Deb Ant task compatible to Ant 1.8+ (Björn "Vampire" Kautler)

- Replaced the links to Java 5 documentation with links to Java 6 documentation
  (Björn "Vampire" Kautler)

- Fixed the build.xml which was for the Windows installer only working if
  completely run on Windows, making "ant dist-win" on another system and then
  using "ant dist-win-finish" was broken (Björn "Vampire" Kautler)

- Made the Windows launcher buildable on any system (Björn "Vampire" Kautler)

- README.SRC.txt cleanup (Björn "Vampire" Kautler)

- Made the Windows installer correctly show special characters like german
  umlauts (Björn "Vampire" Kautler)

- Made the filter tasks use UTF-8 encoding as all our files are UTF-8 encoded
  (Björn "Vampire" Kautler)

- build files and properties cleanup (Björn "Vampire" Kautler)

- Fixed various indentation errors (Björn "Vampire" Kautler)

- Added a new menu item "New Macro" in Macros menu
  (patch #2983607 from Damien Radtke, Matthieu Casanova)

- In search and replace when replacing by a BeanShell snippet, it is now
  possible to use multiple statements instead of only one statement. To do
  that, enclose your code in braces
  (patch #3002207 from cy6erGn0m, Matthieu Casanova)

- Added a command line option "-nosplash" to avoid the splash screen
  (Shlomy Reinstein).

}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: